[package]
name = "sol-arb-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
num-bigfloat = "1.7.1"
solana-sdk = "2.0.5"
solana-client = "2.0.5"
bincode = "1.3.3"
base64 = "0.22.1"
arrayref = "0.3.8"
num_enum = "0.7.3"
time = "0.3.36"

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/ivs/curve25519-dalek', branch='rustls-dep-hell' }
aes-gcm-siv = { git = 'https://github.com/ivs/AEADs', branch='rustls-dep-hell' }